# ASCIIAdventureGame

./: CMakeLists.txt  IO.cpp  IO.h  Item.cpp  Item.h  Level.cpp  Loader.cpp  Monster.cpp  Monster.h  Player.cpp  Player.h  README.md  SaveFileManager.cpp  Space.cpp  World.cpp  World.h  main.cpp
include/: IO.h  Item.h  Level.h  Loader.h  Monster.h  Player.h  SaveFileManager.h  Space.h  Structs.h
resources/: ASCII Game Object Definitions.csv  LevelOneTemplate.csv
resources/templates/: SpaceTypesTemplate.csv
src/: IO.cpp  Item.cpp  Level.cpp  Loader.cpp  Monster.cpp  Player.cpp  SaveFileManager.cpp  Space.cpp
